--- a/style.css
+++ b/style.css
@@ -13,9 +13,21 @@ nav {
 }
 
 textarea{
-    /* margin: 10px; */
+    margin-top: 20px;
+    height: 10vw;
+    width: 40%;
+    padding: 10px;
 }
 
+#text-output{
+    width: 40%;
+    height: 10vw;
+    border: 1px solid black;
+    margin: auto;
+    padding: 10px;
+    margin-bottom: 20px; 
+    
+}
 
 footer{
     background-color: yellow;
@@ -25,3 +37,4 @@ footer{
     /* display: inline; */
     font-size: 1rem;
 }
+
