--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
+    font-family: 'Fuzzy Bubbles', cursive;
 }
 nav {
     background-color: yellow;
@@ -12,6 +13,15 @@ nav {
 
 }
 
+
+#trans-btn {
+    background: red;
+    margin: 20px;
+    padding: 10px;
+
+     
+}
+
 textarea{
     margin-top: 20px;
     height: 10vw;
@@ -19,7 +29,7 @@ textarea{
     padding: 10px;
 }
 
-#text-output{
+#output-el{
     width: 40%;
     height: 10vw;
     border: 1px solid black;
