--- a/style.css
+++ b/style.css
@@ -14,10 +14,13 @@ nav {
 }
 
 
-#trans-btn {
-    background: red;
+#btn {
+    background: yellow;
     margin: 20px;
-    padding: 10px;
+    padding: 15px;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
 
      
 }
